Fix tables on mobile

--- a/apps/frontend/src/styles/pages/_product.sass
+++ b/apps/frontend/src/styles/pages/_product.sass
@@ -71,6 +71,7 @@
         row-end: 6
         column-end: 3
 .sizing-table
+  overflow-x: auto
   h2
     line-height: 1
     margin: 2rem 0 0.5rem
